--- a/user-dev.yml
+++ b/user-dev.yml
@@ -1,4 +1,6 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/discovery/eureka/
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: mySelf@123
+    url: jdbc:mysql://47.98.112.186:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
