--- a/user-dev.yml
+++ b/user-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: mySelf@123
-    url: jdbc:mysql://47.98.112.186:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://47.98.112.186:3306/SpringCloud_Sell
