--- a/user-dev.yml
+++ b/user-dev.yml
@@ -1,4 +1,7 @@
 spring:
+  application:
+    name: user
+spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
