--- a/user-dev.yml
+++ b/user-dev.yml
@@ -2,6 +2,10 @@ server:
   port: 8081
   servlet:
     context-path: /user
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/discovery/eureka/
 spring:
   application:
     name: user
