--- a/user-dev.yml
+++ b/user-dev.yml
@@ -1,11 +1,9 @@
 server:
   port: 8081
-  servlet:
-    context-path: /user
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/discovery/eureka/
+      defaultZone: http://localhost:8761/eureka/
 spring:
   application:
     name: user
