--- a/user-dev.yml
+++ b/user-dev.yml
@@ -41,7 +41,7 @@ spring:
         connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
       datasource:
         master:
-          url: jdbc:mysql://47.98.112.186:3306/mulian
+          url: jdbc:mysql://47.98.112.186:3306/learn
           username: root
           password: 123456
           driver-class-name: com.mysql.jdbc.Driver
@@ -54,7 +54,7 @@ spring:
   #redis 配置
   redis:
     database: 0
-    host: 127.0.0.1
+    host: 47.98.112.186
     lettuce:
       pool:
         max-active: 8   #最大连接数据库连接数,设 0 为没有限制
