--- a/user-dev.yml
+++ b/user-dev.yml
@@ -17,7 +17,7 @@ spring:
   #mysql 配置
   datasource:
     master:
-      url: jdbc:mysql://47.98.112.186:3306/learn
+      url: jdbc:mysql://47.98.112.186:3306/learn?characterEncoding=utf-8&useSSL=false
       username: root
       password: 123456
       driver-class-name: com.mysql.jdbc.Driver
