--- a/client-dev.yml
+++ b/client-dev.yml
@@ -6,3 +6,8 @@ spring:
   sleuth:
     sampler:
       probability: 1
+  rabbitmq:
+    host: 47.98.112.186
+    port: 5672
+    username: guest
+    password: guest
