--- a/zuul-dev.yml
+++ b/zuul-dev.yml
@@ -6,3 +6,16 @@ zuul:
     api-b:
       path: /api-b/**
       serviceId: feign
+spring:
+  rabbitmq:
+    host: 47.98.112.186
+    port: 5672
+    username: guest
+    password: guest
+  zipkin:
+    base-url: http://47.98.112.186:9411/
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
